Added support for partial image decoding